style.css
body {
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    font-size: 15px;
    color:rgb(86, 69, 99);
    transition: background-color 0.5s ease;
    /* overflow: hidden; */
}
body h2 {
    font-family:"Spectral", Verdana, Geneva, Tahoma, sans-serif;
    text-transform: uppercase;
    padding-left: 1rem;
    /* background-color: #fcb61fa6; */
    color: white;
    height: 38px;
    vertical-align: middle;
    padding-top: 10px;
    transition: all 0.3s ease-in-out;
    /* transition: background-color 0.2s ease-in-out; */
}
body h2:hover {
    /* background-color: #00000075; */
    transform: scale(1.02);
}
/* BACKGROUND RELATED */
.glass {
    border-radius: 15px;
    border: 1px solid rgba(255,255,255,0.18);
    box-shadow: 0 8px 10px 0 rgba(0,0,0, 0.1);
    /* backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px); */
}
.animated-bright {
    background: radial-gradient(circle,#f5cd79, #f19066,#e66767,#c44569,#546de5);
    background-size: 300% 300%;
    animation: color 30s ease-in-out infinite;
    transition: all 0.3s ease-in-out;
}
.animated-dark {
    background: linear-gradient(40deg, #620062, #150979, #00bbab, #00a446) repeat-x;
    background-size: 300% 300%;
    animation: color 10s ease-in-out infinite;
    transition: all 0.3s ease-in-out;
}
@keyframes color {
    0% {
        background-position: left;
    }
    25% {
        background-position: top;
    }
    50% {
        background-position: right;
    }
    75% {
        background-position: bottom;
    }
    100% {
        background-position: left;
    }
}
/* ABOUT ME */
.about-me {
    /* background-color: #fd5619bd; */
    border-radius: 15px;
    padding-top: 150px;
    padding-bottom: 80px;
    padding-left: 1rem;
    font-size:40px;
    line-height: 1.5;
    color: white;
    text-transform: uppercase;
    letter-spacing: .1em;
    font-family: "Barlow", Verdana, Geneva, Tahoma, sans-serif;
    transition: all 0.3s ease-in-out;
    
}
.about-me:hover {
    /* background-color: #fd561986; */
    transform: scale(1.02);
}
/* BACKGROUNDS  */
.light-mode {
    background-color: #f5f5f5;
    color: #303952;
}
.dark-mode {
    background-color: #3a3c42;
    color: rgb(230, 230, 230);
}
/* BUTTONS  */
button {
    font-family: "Lato";
    text-transform: uppercase;
}
.pill {
    border: none;
    margin-right: .5em;
    margin-left: .5em;
    padding: .5em 1em;
    padding-top: 0.6em;
    padding-bottom: 0.6em;
    background: rgba(90, 90, 90, 0.5);
    color: white;
    border-radius:1em;
    font-weight: bold;
    font-size: 15px;
    cursor:pointer;
    position: relative;
    /* transition: transform 0.15s ease; */
}

.pill:hover {
    background: linear-gradient(66deg, #03a9f4, #f441a5,#ffeb3b,#03a9f4);
    background-size: 400%;
    z-index:1;
    animation: glow 8s linear infinite;
}
.pill:before {
    content: '';
    position: absolute;
    background: inherit;
    top: -5px;
    bottom: -5px;
    right: -5px;
    left: -5px;
    border-radius:50px;
    filter: blur(6px);
    opacity:0;
    transition: opacity 0.5s;
}
.pill:hover:before {
    opacity: 1;
    z-index: -1;
}
@keyframes glow {
    0% {
        background-position: 0%;
    }
    100% {
        background-position: 400%;
    }
}
/* .pill:hover {
    box-shadow: 2px 2px 20px #00000033;
    transform: scale(1.02);
} */
/* ABOUT ME  */
/* .about-me-button {
    background-color: #786fa6;
} */
/* .about-me-button:hover {
    transform: scale(1.02);
    background-color: 	#574b90;
    box-shadow: 2px 2px 20px #00000033;
} */
/* - SOCIALS  */
/* .social-button {
    background-color: #786fa6;
} */

/* .social-button:hover {
    transform: scale(1.02);
    background-color: 	#574b90;
    box-shadow: 2px 2px 20px #00000033;
} */
 /*- CHANGE THEME  */
/* .light-dark-button {
    background-color: 	#ff6f69;
} */

/* .light-dark-button:hover {
    background-color: 	#dd464e;
    box-shadow: 2px 2px 20px #00000033;
    transform: scale(1.02);
} */
/* - TEXT INPUT  */
#toggle {
    width: 20%;
    border-color: rgba(128, 128, 128, 0.18);
    border-style: solid;
    border-width: 1px;
    border-radius: .5rem;
    height: 25px;
    transition: width 0.5s ease-in-out, background-color 0.15s;
    outline: none;
}
#toggle:focus {
    border: 2px solid rgba(131, 131, 131, 0.18);
    width:25%;
}
/* TABLE  */
#skill-table {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    left: 50%;
    top: 50%;
    width: 40%;
    /* border: 2px solid #b9bb55; */
    /* padding: 6px; */
    vertical-align: middle;
    /* box-sizing: border-box; */
    /* display:table; */
    border-collapse: collapse;
    box-shadow: 2px 2px 2px rgba(0,0,0,0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
}
/* TABLE DATA, TABLE HEADING  */
#skill-table td, #skill-table th {
    padding:6px;
    padding-left: 15px;
    padding-right: 15px;
    height: 25px;
    border-bottom: 1px solid #ddd;
    
}
/* TABLE EVEN ROWS */
#skill-table tr:nth-child(even) {
    background-color: #00000010;
}
/* TABLE ROWS  */
#skill-table tr {
    transition: all 0.15s ease-in;
    cursor: pointer;
}
/* TABLE ROW HOVER  */
#skill-table tr:hover {
    background-color: rgba(0, 0, 0, 0.205);
    transform: scale(1.02);
    box-shadow: 2px 2px 2px rgba(0,0,0,0.1), -1px -1px 8px rgba(0, 0, 0, 0.1);
}
/* TABLE HEADING  */
#skill-table th {
    background-color: rgba(90, 90, 90, 0.342);
}

